--- a/ssr/src/styles/globals.css
+++ b/ssr/src/styles/globals.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	body {
+		font-family: "Inter", sans-serif;
+	}
+}
